--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,10 +8,15 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.9"
 fastapi = {extras = ["all"], version = "^0.95.1"}
-pandera = "^0.14.5"
+pandera = {extras = ["strategies"], version = "^0.14.5"}
 pandas = "^2.0.1"
 numpy = "^1.24.3"
+fastparquet = "^2023.4.0"
 
+
+[tool.poetry.group.dev.dependencies]
+black = "^23.3.0"
+mypy = "^1.2.0"
 
 [build-system]
 requires = ["poetry-core"]
