--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,13 @@ authors = ["Magne Strømsnes <alaka2@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = ">=3.9,<3.12"
 fastapi = {extras = ["all"], version = "^0.95.1"}
-pandera = {extras = ["strategies"], version = "^0.14.5"}
+pandera = {extras = ["fastapi", "mypy", "strategies"], version = "^0.15.1"}
 pandas = "^2.0.1"
 numpy = "^1.24.3"
 fastparquet = "^2023.4.0"
+fastapi-utils = "^0.2.1"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -19,6 +20,7 @@ black = "^23.3.0"
 mypy = "^1.2.0"
 pytest = "^7.3.1"
 httpx = "^0.24.0"
+ipykernel = "^6.23.1"
 
 [build-system]
 requires = ["poetry-core"]
