--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ pytest = "^7.3.1"
 httpx = "^0.24.0"
 ipykernel = "^6.23.1"
 hypothesis = "^6.78.1"
+isort = "^5.12.0"
 
 [build-system]
 requires = ["poetry-core"]
